<resources>
    <string name="app_name">EarthQuakeReport</string>

    <!-- Default text to show with the earthquake location ("Near the Pacific-Antarctic Ridge")
    if no specific kilometer distance from the primary location is given [CHAR LIMIT=30] -->
    <string name="near_the">Near the</string>
    <string name="mag_text">9.6</string>
    <string name="location_offset_text">87 Km of</string>
    <string name="date_text">Mar 6, 2017</string>
    <string name="time_text">3:00 PM</string>
    <string name="primary_location_text">San Francisco, CA</string>
    <string name="fontFamily_textView">sans-serif</string>
    <string name="no_earthquakes">No earthquakes found</string>
    <string name="no_internet_connection">No internet connection</string>

</resources>
