<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:orientation="horizontal"
    android:padding="@dimen/item_padding">

    <TextView
        android:id="@+id/magnitude"
        android:layout_width="@dimen/mag_width"
        android:layout_height="@dimen/mag_height"
        android:layout_gravity="center_vertical"
        android:background="@drawable/magnitude_circle"
        android:gravity="center"
        android:text="@string/mag_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/mag_textSize" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/layout_margin"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/location_offset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:fontFamily="@string/fontFamily_textView"
            android:maxLines="1"
            android:textAllCaps="true"
            android:textColor="@color/textColorEarthquakeDetails"
            android:textSize="@dimen/location_offset_textSize"
            tools:targetApi="jelly_bean"
            tools:text="@string/location_offset_text" />

        <TextView
            android:id="@+id/primary_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:fontFamily="@string/fontFamily_textView"
            android:maxLines="2"
            android:textColor="@color/textColorEarthquakeLocation"
            android:textSize="@dimen/primary_location_textSize"
            tools:targetApi="jelly_bean"
            tools:text="@string/primary_location_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/layout_margin"
        android:layout_marginStart="@dimen/layout_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="end"
            android:text="@string/date_text"
            android:textColor="@color/textColorEarthquakeDetails"
            android:textSize="@dimen/date_textSize" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="end"
            android:text="@string/time_text"
            android:textColor="@color/textColorEarthquakeLocation"
            android:textSize="@dimen/time_textSize" />
    </LinearLayout>


</LinearLayout>
